[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/windows_command_prompt.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/temas/botao_start_scene.tres" type="Theme" id=2]
[ext_resource path="res://scripts/game_over/game_over.gd" type="Script" id=3]
[ext_resource path="res://assets/personagens/biscoito/girando.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("game_over1/biscoito_girando:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "biscoito_girando"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("game_over1/biscoito_girando:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="game_over" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -480.0
margin_bottom = -288.0
script = ExtResource( 3 )

[node name="background" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 288.0
color = Color( 0, 0, 0, 1 )

[node name="game_over1" type="Control" parent="."]
visible = false

[node name="text1" type="Label" parent="game_over1"]
margin_right = 480.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 1 )
text = "A verdade..."
align = 1
valign = 1

[node name="text2" type="Label" parent="game_over1"]
margin_top = 52.0
margin_right = 480.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 2 )
text = "Você conseguiu sobreviver
por enquanto...

O fim chega pra tudo, inclusive para
 essa demo. Obrigado por jogar S2;




6 dias até o amanhacer..."
align = 1
valign = 1

[node name="sair" type="Button" parent="game_over1"]
margin_left = 224.0
margin_top = 256.0
margin_right = 256.0
margin_bottom = 265.0
theme = ExtResource( 2 )
text = "sair"

[node name="biscoito_girando" type="Sprite" parent="game_over1"]
position = Vector2( 240, 192 )
texture = ExtResource( 4 )
hframes = 4

[node name="game_over2" type="Control" parent="."]
visible = false

[node name="text1" type="Label" parent="game_over2"]
margin_right = 480.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 1 )
text = "Fim?"
align = 1
valign = 1

[node name="text2" type="Label" parent="game_over2"]
margin_top = 56.0
margin_right = 480.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 2 )
text = "É assim mesmo que acaba, 
eu já não me lembro..."
align = 1
valign = 1

[node name="sim" type="Button" parent="game_over2"]
margin_left = 228.0
margin_top = 192.0
margin_right = 252.0
margin_bottom = 201.0
theme = ExtResource( 2 )
text = "Sim"

[node name="nao" type="Button" parent="game_over2"]
margin_left = 228.0
margin_top = 216.0
margin_right = 252.0
margin_bottom = 225.0
theme = ExtResource( 2 )
text = "Não"

[node name="animation_player" type="AnimationPlayer" parent="."]
autoplay = "biscoito_girando"
playback_speed = 0.5
anims/RESET = SubResource( 3 )
anims/biscoito_girando = SubResource( 4 )

[connection signal="pressed" from="game_over1/sair" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="game_over2/sim" to="." method="_on_sim_pressed"]
[connection signal="pressed" from="game_over2/nao" to="." method="_on_nao_pressed"]
